--- a/source/form.html
+++ b/source/form.html
@@ -7,21 +7,26 @@
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page__body">
+    <!-- При подключении JS убирается у кнопки класс page-header__toggle--no-js, кнопка становится видимой.
+    Для меню с классом main-nav добавляется класс main-nav--closed, меню скрывается.
+    Для шапки с классом page-header добавляется класс page-header--closed, шапка меняет внешний вид и больше не в потоке. Кнопка также меняет внешний вид.
+    При нажатии на кнопку у меню убирается класс main-nav--closed, у шапки убирается класс page-header--closed и добавляется класс page-header--open.
+    При повторном нажатии на кнопку для меню добавляется класс main-nav--closed, шапке добавляется класс page-header--closed и убирается класс page-header--open.-->
     <header class="page-header">
       <div class="page-header__wrapper">
         <div class="page-header__logo-wrapper">
           <a class="page-header__logo" href="index.html">
-            <svg class="logo-pink-white" width="74.426px" height="22.859px">
+            <svg class="logo-pink-white" width="74" height="23">
               <use xlink:href="./img/sprite/sprite.svg#logo-pink-white-mobile"></use>
             </svg>
-            <svg class="logo-pink-white-glasses" width="146.3px" height="40.375px">
+            <svg class="logo-pink-white-glasses" width="146" height="40">
               <use xlink:href="./img/sprite/sprite.svg#logo-pink-white-tablet"></use>
             </svg>
-            <svg class="logo-pink-white-stars" width="146.3px" height="40.375px">
+            <svg class="logo-pink-white-stars" width="146" height="40">
               <use xlink:href="./img/sprite/sprite.svg#logo-pink-white-desktop"></use>
             </svg>
           </a>
-          <button class="page-header__toggle" type="button" aria-label="Открыть меню"></button>
+          <button class="page-header__toggle page-header__toggle--no-js" type="button" aria-label="Открыть меню"></button>
         </div>
         <nav class="main-nav">
           <div class="main-nav__wrapper">
@@ -64,11 +69,11 @@
           <div class="form__block form__block--data">
             <div class="form__input-block">
               <label class="form__label" for="surname">Фамилия</label>
-              <input class="form__input" type="text" id="surname" name="surname" placeholder="Укажите фамилию *">
+              <input class="form__input" type="text" id="surname" name="surname" placeholder="Укажите фамилию *" required>
             </div>
             <div class="form__input-block">
               <label class="form__label" for="name">Имя</label>
-              <input class="form__input" type="text" id="name" name="name" placeholder="Введите ваше имя *">
+              <input class="form__input" type="text" id="name" name="name" placeholder="Введите ваше имя *" required>
             </div>
             <div class="form__input-block">
               <label class="form__label" for="patronymic">Отчество</label>
@@ -116,7 +121,7 @@
                 </div>
                 <div class="form__input-block">
                   <label class="form__label" for="email">Адрес почты</label>
-                  <input class="form__input form__input--mail" type="email" id="email" name="email" placeholder="Введите почту *">
+                  <input class="form__input form__input--mail" type="email" id="email" name="email" placeholder="Введите почту *" required>
                 </div>
               </div>
             </fieldset>
@@ -127,15 +132,15 @@
               <ul class="form__apps-list">
                 <li class="form__apps-item">
                   <input class="form__apps-input" type="radio" id="ios" name="device" checked>
-                  <label class="form__apps-label" for="ios">Pink для iOS</label>
+                  <label class="form__apps-label" for="ios"  tabindex="0">Pink для iOS</label>
                 </li>
                 <li class="form__apps-item">
                   <input class="form__apps-input" type="radio" id="Android" name="device">
-                  <label class="form__apps-label" for="Android">Pink на Android</label>
+                  <label class="form__apps-label" for="Android" tabindex="0">Pink на Android</label>
                 </li>
                 <li class="form__apps-item">
                   <input class="form__apps-input" type="radio" id="windows" name="device">
-                  <label class="form__apps-label" for="windows">Windows Phone</label>
+                  <label class="form__apps-label" for="windows" tabindex="0">Windows Phone</label>
                 </li>
               </ul>
             </fieldset>
@@ -171,10 +176,10 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <a class="page-footer__link" href="index.html">
-          <svg class="logo-pink-blue" width="146.3px" height="40.375px">
+          <svg class="logo-pink-blue" width="146" height="40">
             <use xlink:href="./img/sprite/sprite.svg#logo-pink-blue-mobile"></use>
           </svg>
-          <svg class="logo-pink-blue-stars" width="146.3px" height="40.375px">
+          <svg class="logo-pink-blue-stars" width="146" height="40">
             <use xlink:href="./img/sprite/sprite.svg#logo-pink-blue-desktop"></use>
           </svg>
         </a>
@@ -183,28 +188,29 @@
           <ul class="social-list">
             <li class="social-list__item">
               <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter">
-                <svg width="17.5px" height="14.663px">
+                <svg width="18" height="15">
                   <use xlink:href="./img/sprite/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list__item">
               <a class="social-list__link social-list__link--facebook" href="#" aria-label="Перейти в Facebook">
-                <svg width="8.673px" height="18.944px">
+                <svg width="9" height="19">
                   <use xlink:href="./img/sprite/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list__item">
               <a class="social-list__link social-list__link--youtube" href="#" aria-label="Перейти на Youtube">
-                <svg width="14.64px" height="13.96px">
+                <svg width="15" height="14">
                   <use xlink:href="./img/sprite/sprite.svg#icon-youtube"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </section>
-        <section class="page-footer__credits">            <h2 class="visually-hidden">Разработано</h2>
+        <section class="page-footer__credits">
+          <h2 class="visually-hidden">Разработано</h2>
           <span>Разработано</span>
           <a href="https://htmlacademy.ru/intensive/adaptive" class="page-footer__credits-logo">
             <svg width="40" height="40">
