--- a/source/photo.html
+++ b/source/photo.html
@@ -7,21 +7,26 @@
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body class="page__body">
+    <!-- При подключении JS убирается у кнопки класс page-header__toggle--no-js, кнопка становится видимой.
+    Для меню с классом main-nav добавляется класс main-nav--closed, меню скрывается.
+    Для шапки с классом page-header добавляется класс page-header--closed, шапка меняет внешний вид и больше не в потоке. Кнопка также меняет внешний вид.
+    При нажатии на кнопку у меню убирается класс main-nav--closed, у шапки убирается класс page-header--closed и добавляется класс page-header--open.
+    При повторном нажатии на кнопку для меню добавляется класс main-nav--closed, шапке добавляется класс page-header--closed и убирается класс page-header--open.-->
     <header class="page-header">
       <div class="page-header__wrapper">
         <div class="page-header__logo-wrapper">
           <a class="page-header__logo" href="index.html">
-            <svg class="logo-pink-white" width="74.426px" height="22.859px">
+            <svg class="logo-pink-white" width="74" height="23">
               <use xlink:href="./img/sprite/sprite.svg#logo-pink-white-mobile"></use>
             </svg>
-            <svg class="logo-pink-white-glasses" width="146.3px" height="40.375px">
+            <svg class="logo-pink-white-glasses" width="146" height="40">
               <use xlink:href="./img/sprite/sprite.svg#logo-pink-white-tablet"></use>
             </svg>
-            <svg class="logo-pink-white-stars" width="146.3px" height="40.375px">
+            <svg class="logo-pink-white-stars" width="146" height="40">
               <use xlink:href="./img/sprite/sprite.svg#logo-pink-white-desktop"></use>
             </svg>
           </a>
-          <button class="page-header__toggle" type="button" aria-label="Открыть меню"></button>
+          <button class="page-header__toggle page-header__toggle--no-js" type="button" aria-label="Открыть меню"></button>
         </div>
         <nav class="main-nav">
           <div class="main-nav__wrapper">
@@ -181,13 +186,13 @@
           </div>
           <form action="https://echo.htmlacademy.ru" method="post" class="editor__block">
             <div class="editor__options">
-              <svg class="editor__options-icon editor__options-icon--active icon-editor-crop" width="48px" height="48px">
+              <svg class="editor__options-icon editor__options-icon--active icon-editor-crop" width="48" height="48">
                 <use xlink:href="./img/sprite/sprite.svg#icon-editor-crop"></use>
               </svg>
-              <svg class="editor__options-icon icon-editor-fill" width="48px" height="48px">
+              <svg class="editor__options-icon icon-editor-fill" width="48" height="48">
                 <use xlink:href="./img/sprite/sprite.svg#icon-editor-fill"></use>
               </svg>
-              <svg class="editor__options-icon icon-editor-contrast" width="31.92px" height="31.92px">
+              <svg class="editor__options-icon icon-editor-contrast" width="32" height="32">
                 <use xlink:href="./img/sprite/sprite.svg#icon-editor-contrast"></use>
               </svg>
             </div>
@@ -207,7 +212,7 @@
             </div>
             <div class="editor__buttons">
               <button class="editor__button editor__button-upload" type="submit">Запостить</button>
-              <button class="editor__button editor__button-cancel" type="button">Отмена</button>
+              <button class="editor__button editor__button-cancel" type="reset">Отмена</button>
             </div>
           </form>
         </div>
@@ -217,10 +222,10 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <a class="page-footer__link" href="index.html">
-          <svg class="logo-pink-blue" width="146.3px" height="40.375px">
+          <svg class="logo-pink-blue" width="146" height="40">
             <use xlink:href="./img/sprite/sprite.svg#logo-pink-blue-mobile"></use>
           </svg>
-          <svg class="logo-pink-blue-stars" width="146.3px" height="40.375px">
+          <svg class="logo-pink-blue-stars" width="146" height="40">
             <use xlink:href="./img/sprite/sprite.svg#logo-pink-blue-desktop"></use>
           </svg>
         </a>
@@ -229,21 +234,21 @@
           <ul class="social-list">
             <li class="social-list__item">
               <a class="social-list__link social-list__link--twitter" href="#" aria-label="Перейти в Twitter">
-                <svg width="17.5px" height="14.663px">
+                <svg width="18" height="15">
                   <use xlink:href="./img/sprite/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list__item">
               <a class="social-list__link social-list__link--facebook" href="#" aria-label="Перейти в Facebook">
-                <svg width="8.673px" height="18.944px">
+                <svg width="9" height="19">
                   <use xlink:href="./img/sprite/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list__item">
               <a class="social-list__link social-list__link--youtube" href="#" aria-label="Перейти на Youtube">
-                <svg width="14.64px" height="13.96px">
+                <svg width="15" height="14">
                   <use xlink:href="./img/sprite/sprite.svg#icon-youtube"></use>
                 </svg>
               </a>
